@@ -18,7 +18,7 @@ public class NotifyAccountTest {
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -35,7 +35,7 @@ public class NotifyAccountTest {
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
@@ -46,7 +46,7 @@ public class NotifyAccountTest {
     @Test
     public void whenEmpty() {
         List<Account> accounts = new ArrayList<>();
-        HashSet<Account> expect = new HashSet<>(Arrays.asList());
+        HashSet<Account> expect = new HashSet<>(List.of());
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 }
